# PublicArea

./: 2020-05-08.xmind  5151.txt  English.txt  ~$张嘉文-简历.docx  张嘉文-夜间老鼠识别.docx  张嘉文-简历.docx  张嘉文-自我介绍.docx  答辩.xmind  记录.txt  面试手册-解答.docx
Code/: 00_other.cpp  CMakeLists.txt  Center_Loss.py  Erro.txt  Tips.py  argFace.py  jjjjjjjj.py  mnist.pt  test.py
XMindReport/: 2020-05-08.xmind  2020-05-08（git和github使用）.xmind  2020-05-12.xmind  2020-05-12（AI分类）.xmind  2020-05-13.xmind  2020-05-15（部署）.xmind  2020-05-19（初等函数）.xmind  2020-05-22（高数线代）.xmind  2020-05-23（矩阵，张量）.xmind  2020-05-26（线性代数）.xmind  2020-05-30（概率论）.xmind  2020-06-04-Numpy简介.xmind  2020-06-05（PLT,Matplotlib）.xmind  2020-06-09（Opencv）.xmind  2020-06-25（SK-Learn）.xmind  2020-07-08-1（SK-Learn）.xmind  2020-07-08-2（DeepLearning）.xmind  2020-07-15（手写识别项目）.xmind  2020-07-15（手写项目1）.xmind  2020-07-16（卷积）.xmind  2020-07-22（卷积）.xmind  2020-07-23（DeepLearning）.xmind  (+20 more)
cpp/: 10_Function.cpp  11_CO_en.cpp  13_CO_buile_clearn.cpp  14_CO_this.cpp  15_CO_Friend.cpp  16_Operator_ol.cpp  17_Inherit.cpp  18_pppp.cpp  1_Const_DateType.cpp  3_Arr.cpp  4_Pointer.cpp  5_StringThing.cpp  7_Stack.cpp  9_Quote.cpp  CMakeLists.txt  Circle.cpp  Circle.hpp  Point.cpp  Point.hpp  main.cpp  note.cpp
cpp/Ai/: OpencvFilter.cpp  OpencvStudy.cpp
cpp/CppWrite/: CMakeLists.txt  main.cpp
cpp/Test/: 12_CO_en_case.cpp  18_Polymorphic.cpp  1_Const_DateType.cpp  6_ABMS.cpp
cpp/cpp/: 17_Inherit.cpp  2_Operator.cpp  8_Heap.cpp  Leiwei_ob.cpp  note.cpp
cpp/cpp.xcodeproj/: project.pbxproj
cpp/cpp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
cpp/cpp.xcodeproj/project.xcworkspace/xcuserdata/kabun.xcuserdatad/: UserInterfaceState.xcuserstate
cpp/cpp.xcodeproj/xcuserdata/kabun.xcuserdatad/xcschemes/: xcschememanagement.plist
(+471 files in other folders)
